--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="/dist/output.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
